--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello Scot!
+<!DOCTYPE html>
+<html>
+<!-- <body style="background-color:powderblue;"> -->
+
+  
+<h1>Hello</h1>
+  
+<p>This is a paragraph.</p>
+
+  
+</body>
+</html>
