--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <h1>Hello</h1>
   
 <p>This is a paragraph.</p>
+  
+<div> 
+  This is a div
+  <p>This is a paragraph in the div.</p>
+  <p>This is a paragraph in the div.</p>
+</div>
+  
+  <button> I am A button </button>
 
   
 </body>
