--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <p>This is a paragraph in the div.</p>
 </div>
   
-  <button> I am A button </button>
-
+<button> I am A button </button>
+  
+<a href="https://www.w3schools.com">I link to google</a>
   
 </body>
 </html>
