--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 <button> I am A button </button>
   
-<a href="https://www.w3schools.com">I link to google</a>
+<a href="https://www.w3schools.com">I link to w3schools</a>
   
 </body>
 </html>
