--- a/index.html
+++ b/index.html
@@ -19,5 +19,17 @@
   
 <a href="https://www.w3schools.com">I link to w3schools</a>
   
+  
+<h1>Examples of phrase elements (text styles)</h1>
+<h3>Note: some are combined with line brakes</h3>
+  
+  
+<em>Emphasized text</em><br>
+<strong>Strong text</strong><br>
+<code>A piece of computer code</code><br>
+<samp>Sample output from a computer program</samp><br>
+<kbd>Keyboard input</kbd><br>
+<var>Variable</var>
+  
 </body>
 </html>
