--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 <button> I am A button </button>
   
-<br> use the br to forces 2 line brakes<br>
+<br>Using the br to forces 2 line brakes before and after this text<br>
   
 <a href="https://www.w3schools.com">I link to w3schools</a>
   
@@ -30,6 +30,10 @@
 <samp>Sample output from a computer program</samp><br>
 <kbd>Keyboard input</kbd><br>
 <var>Variable</var>
+  
+  <p> Example of hr (horizontal line) element </p>  
+<hr>
+
   
 </body>
 </html>
