--- a/index.html
+++ b/index.html
@@ -33,7 +33,20 @@
   
   <p> Example of hr (horizontal line) element </p>  
 <hr>
+  
+  <h3> Examples of lists</h3>
+<ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
 
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+  
   
 </body>
 </html>
