--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <li>Milk</li>
 </ul>
   
+ <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t31.0-8/15440535_10154853487974577_2226540499445097889_o.jpg?_nc_cat=106&_nc_sid=daf655&_nc_ohc=Dl5MQttkR5sAX89wyj_&_nc_ht=scontent-sjc3-1.xx&oh=44dd36a7d9ea6db886fa3507dc7ada85&oe=5ED2207F" alt="Smiley face" height="42" width="42">
+
   
 </body>
 </html>
