--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+<!-- This is a comment and will not be seen as code, it will be ignored and not seen on the page (use commad shift to comment)   -->
+  
+<!-- in the style section is the css for the page  -->
+<style>
+      #grad1 {
+        height: 200px;
+        background-color: blue; /* For browsers that do not support gradients */
+        background-image: linear-gradient(blue, green); /* Standard syntax (must be last) */
+      }
+</style>
+  
+<!--  This is the body of the page  -->
 <body style="background-color:powderblue;">
 
   
@@ -51,6 +63,12 @@
   <h2>This guy and tray flip and build a web page in the same day</h2>
  <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t31.0-8/15440535_10154853487974577_2226540499445097889_o.jpg?_nc_cat=106&_nc_sid=daf655&_nc_ohc=Dl5MQttkR5sAX89wyj_&_nc_ht=scontent-sjc3-1.xx&oh=44dd36a7d9ea6db886fa3507dc7ada85&oe=5ED2207F" alt="image of some guy" height="420" width="420">
 
+
+
+<h3>Linear Gradient - Top to Bottom</h3>
+<p>This linear gradient starts at the top. It starts blue, transitioning to green:</p>
+
+<div id="grad1"></div>
   
 </body>
 </html>
