--- a/index.html
+++ b/index.html
@@ -73,10 +73,13 @@
 <div id="grad1"></div>
   
   
-<h2>JavaScript For Loop that addes makes a varable called text and adds it to the div with the id 'JSdemo'</h2>
+<h2>
+JavaScript For Loop that makes a varable called text and concatonates items form a list between <br>
+ w/ line brakes into to the text varable then gets the p elements 'JSdemo' by its id <br> 
+  then sets its inner HTML to the created varable'
+</h2>
 
 <p id="JSdemo"></p>
-
 <script>
 var cars = ["BMW", "Volvo", "Saab", "Ford", "Fiat", "Audi"];
 var text = "";
