--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
 <div id="grad1"></div>
   
   
-<h2>
-JavaScript For Loop that makes a varable called text and concatonates items form a list between <br>
+<h2>JavaScript For Loop that addeds list data to the page </h2>
+  
+<h4> a varable called text and concatonates items form a list between <br>
  w/ line brakes into to the text varable then gets the p elements 'JSdemo' by its id <br> 
   then sets its inner HTML to the created varable'
-</h2>
+</h4>
 
 <p id="JSdemo"></p>
 <script>
