--- a/index.html
+++ b/index.html
@@ -75,12 +75,15 @@
   
 <h2>JavaScript For Loop that addeds list data to the page </h2>
   
-<h4> a varable called text and concatonates items form a list between <br>
- w/ line brakes into to the text varable then gets the p elements 'JSdemo' by its id <br> 
+<h4> The code makes a varable called text and concatonates items form a list between <br>
+ w/ line brakes into to the text varable then gets the empty HTML p elements 'JSdemo' by its id <br> 
   then sets its inner HTML to the created varable'
 </h4>
 
+<!-- make empty P element with id -->
 <p id="JSdemo"></p>
+  
+<!-- Start js for loop scrip   -->
 <script>
 var cars = ["BMW", "Volvo", "Saab", "Ford", "Fiat", "Audi"];
 var text = "";
