--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
         background-color: blue; /* For browsers that do not support gradients */
         background-image: linear-gradient(blue, green); /* Standard syntax (must be last) */
       }
+  
+    .myClassName { 
+      background-color: yellow;
+     }
 </style>
   
 <!--  This is the body of the page  -->
 <body style="background-color:powderblue;">
 
   
-<h1<This is scot doing a frontside noseslide at Oakland/h1>
+<h1<This is Scot doing a frontside noseslide at Oakland/h1>
   
 <p>This is a paragraph.</p>
+<p class="myClassName">This is a paragraph with a class.</p>
   
 <center><p>This is a paragraph in a center tag.</p></center>
   
