--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     .myClassName { 
       background-color: yellow;
      }
+  
+ #animationDiv {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  animation-name: example;
+  animation-duration: 4s;
+}
+
+@keyframes example {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
+}
+  
 </style>
   
 <!--  This is the body of the page  -->
@@ -71,6 +87,15 @@
  <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t31.0-8/15440535_10154853487974577_2226540499445097889_o.jpg?_nc_cat=106&_nc_sid=daf655&_nc_ohc=Dl5MQttkR5sAX89wyj_&_nc_ht=scontent-sjc3-1.xx&oh=44dd36a7d9ea6db886fa3507dc7ada85&oe=5ED2207F" alt="image of some guy" height="420" width="420">
 
 
+  
+<!-- More things with CSS -->
+  
+<hl>
+  
+  <h2>These are things you can do with CSS</h2>
+  
+<div id="animationDiv"></div>
+  
 
 <h3>Linear Gradient - Top to Bottom</h3>
 <p>This linear gradient starts at the top. It starts blue, transitioning to green:</p>
