--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
   
 <div id="animationDiv"></div>
   
+  
+<img id="skateboard" src="https://i.dlpng.com/static/png/275146_preview.png">
+  
 
 <hr>
   
