--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
   100% {background-color: green;}
 }
   
+ #skateboard {
+  height: 400px;
+  animation-name: slidein;
+  animation-duration: 3s;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+  
+@keyframes example {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
+}
+  
 </style>
   
 <!--  This is the body of the page  -->
